# ocaml-solo5

./: .cirrus.yml  .gitignore  .travis-test-mirage.sh  .travis.yml  CHANGES.md  LICENSE  Makefile  README.md  RELEASE.md  configure.sh  dune  dune-project  freestanding.conf.in  gen_dot_install.sh  gen_ocaml_install.sh  gen_solo5_conf.sh  gen_toolchain_tool.sh  install.sh  ocaml-freestanding-cross-aarch64.opam  ocaml-freestanding-option-cross-aarch64.opam  ocaml-freestanding-option-flambda.opam  ocaml-freestanding-option-host.opam  ocaml-freestanding.opam  ocaml-freestanding.pc  ocaml-freestanding.pc.in  ocaml-solo5-cross-aarch64.opam  ocaml-solo5.opam  opam  opatch.ml  solo5-bindings-genode.opam  solo5-bindings-hvt.opam  solo5-bindings-muen.opam  solo5-bindings-spt.opam  solo5-bindings-virtio.opam  solo5-bindings-xen.opam  solo5-bindings.opam  solo5.conf.in  uninstall.sh
.github/workflows/: macos.yml  test.yml
bindings/genode/: dune
bindings/hvt/: dune  nolibc
bindings/muen/: dune
bindings/spt/: dune.spt  openlibm  solo5
bindings/virtio/: dune  solo5
bindings/xen/: dune.xen
config/: Makefile.FreeBSD.x86_64  Makefile.x86_64  discover.ml  s.h  version.h
config.in/: Makefile.Linux.aarch64  Makefile.Linux.amd64  Makefile.Linux.arm  Makefile.OpenBSD.amd64  Makefile.arm  m.aarch64.h  m.amd64.h  m.arm.h  m.x86_64.h  s.h
example/: compilerlibsx86.ml  config.ml  dune  dune-workspace  dune.inc  dune_gen.ml  hello.ml  main.ml  manifest.c  manifest.json  startup.c  sysfail.ml
files/: build.ml  cflags.pc.in  dune  dune.genode  dune.hvt  dune.inc  dune.muen  dune.ocaml  dune.ocaml-runtime  dune.spt  dune.virtio  dune.xen  genode-cflags.pc.in  genode-ldflags.pc.in  ldflags.pc.in
flags/: cflags.tmp.in  libs.tmp.in
mirage-test/: config.ml
nolibc/: Makefile  assert.c  ctype.c  dlmalloc.i  dtoa.c  errlist.c  fstat.c  malloc.c  mm.c  mmap.c  puts.c  strerror_r.c  strnlen.c  stubs.c  sysconf.c  sysdeps_solo5.c  vfprintf.c  vsnprintf.c
nolibc/include/: assert.h  ctype.h  endian.h  errno.h  fcntl.h  inttypes.h  limits.h  nolibc.h  pthread.h  sched.h  setjmp.h  signal.h  stdatomic.h  stdio.h  stdlib.h  string.h  unistd.h
patches/: run.sh
patches/4.08.0/: 00-configure.patch
patches/4.08.1/: 00-configure.patch
patches/4.09.0/: 00-configure.patch
patches/4.09.1/: 00-configure.patch
patches/4.10.0/: 00-configure.patch
patches/4.10.1/: 00-configure.patch
patches/4.10.2/: 00-configure.patch
patches/4.11.0/: 00-configure.patch
patches/4.11.1/: 00-configure.patch
patches/4.11.2/: 00-configure.patch
patches/4.12.0/: 00-configure.patch
patches/4.12.1/: 00-configure.patch
patches/4.13.0/: 00-configure.patch
patches/4.13.1/: 00-configure.patch
patches/5.2.0/: 0001-Add-missing-defined-in-preprocessor-test.patch  0001-Fix-two-small-issues-with-preprocessor-directives-13.patch  0002-Detect-and-use-CC-.-_FOR_BUILD-to-build-sak.patch  0002-Include-config.h-before-HAS_GETTIMEOFDAY-is-tested.patch  0003-Detect-and-use-CC-.-_FOR_BUILD-to-build-sak.patch  0003-Use-target-instead-of-host-to-detect-the-C-toolchain.patch  0004-Use-target-instead-of-host-to-detect-the-C-toolchain.patch  0004-Use-target-instead-of-host-when-relevant-in-configur.patch  0005-Use-target-instead-of-host-when-relevant-in-configur.patch  0005-Use-the-strip-command-detected-by-libtool.patch  0006-Strip-tmpheader.exe-also-on-Windows.patch  0006-WIP-Use-the-STRIP-command-automatically-detected-by-.patch  0007-Allow-ocaml-as-a-target-OS-to-configure-freestanding.patch  0008-Define-OS-type-to-None.patch  0009-Add-freestanding-targets-to-supported-configurations.patch  0010-Check-that-the-configured-and-the-installed-OCaml-ar.patch  0011-Use-the-target-pkg-config-to-detect-zstd.patch  0012-WIP-Add-a-Makefile.cross-for-recipes-to-build-a-cros.patch  0013-Set-Max_domains-to-1.patch  0014-Set-stack-as-non-executable-on-freestanding-targets.patch
patches/5.2.1/: 0001-Fix-two-small-issues-with-preprocessor-directives-13.patch  0002-Detect-and-use-CC-.-_FOR_BUILD-to-build-sak.patch  0003-Use-target-instead-of-host-to-detect-the-C-toolchain.patch  0004-Use-target-instead-of-host-when-relevant-in-configur.patch  0005-Use-the-strip-command-detected-by-libtool.patch  0006-Strip-tmpheader.exe-also-on-Windows.patch  0007-Allow-ocaml-as-a-target-OS-to-configure-freestanding.patch  0008-Define-OS-type-to-None.patch  0009-Add-freestanding-targets-to-supported-configurations.patch  0010-Check-that-the-configured-and-the-installed-OCaml-ar.patch  0011-Use-the-target-pkg-config-to-detect-zstd.patch  0012-WIP-Add-a-Makefile.cross-for-recipes-to-build-a-cros.patch  0013-Set-Max_domains-to-1.patch  0014-Set-stack-as-non-executable-on-freestanding-targets.patch
patches/5.3.0/: 0001-Use-target-instead-of-host-to-detect-the-C-toolchain.patch  0002-Use-target-instead-of-host-when-relevant-in-configur.patch  0003-Detect-a-_build_-C-toolchain-to-build-sak.patch  0004-Check-that-the-OCaml-versions-are-compatible-for-a-c.patch  0005-Use-a-TARGET_BINDIR-configure-variable-instead-of-wi.patch  0006-Add-a-configurable-library-directory-on-target.patch  0007-Detect-flexlink-only-on-relevant-targets.patch  0008-Add-a-Makefile.cross-with-rules-to-build-a-cross-com.patch  0010-Fix-static-builds-of-the-compiler.patch  0011-Add-a-dummy-caml_debugger_saved_instruction-when-HAS.patch  0013-Detect-the-need-for-the-GNU-note-for-non-executable-.patch  0014-Add-a-Config-variable-for-the-need-of-the-GNU-non-ex.patch  0015-Output-the-.note.GNU-stack-section-based-on-configur.patch  0016-Detect-support-for-.size-and-.type-assembler-directi.patch  0017-Add-a-Config-variable-for-the-.size-and-.type-assemb.patch  0019-Accept-native-freestanding-targets-at-configure-time.patch  0020-Allow-ocaml-in-a-triplet-target-to-build-freestandin.patch  0021-Set-Max_domains_-def-max-to-1.patch
patches/5.4.0/: 0003-Set-Max_domains_-def-max-to-1.patch  (+2 more)
scripts/: build-nolibc.sh  build-openlibm.sh  configure-ocaml.sh  vendor-ocaml.sh  vendor-solo5.sh
stubs/: solo5_stubs.c
test/: dune  dune-workspace  main.ml  startup.c
unikernel/: README.md  dune  main.ml
(+29 files in other folders)
