opam-version: "2.0"
maintainer: "Martin Lucina <martin@lucina.net>"
authors: "Martin Lucina <martin@lucina.net>"
homepage: "https://github.com/mirage/ocaml-freestanding"
bug-reports: "https://github.com/mirage/ocaml-freestanding/issues/"
license: "MIT"
tags: "org:mirage"
dev-repo: "git+https://github.com/mirage/ocaml-freestanding.git"
build: [
  ["./configure.sh"
   "--prefix=%{prefix}%"
   "--target=x86_64-solo5-none-static" { arch = "x86_64" }
   "--target=aarch64-solo5-none-static" { arch = "arm64" }
   "--ocaml-configure-option=--with-afl" {ocaml-option-afl:installed}
   "--ocaml-configure-option=--disable-native-compiler" {ocaml-option-bytecode-only:installed}
   "--ocaml-configure-option=--disable-force-safe-string" {ocaml-option-default-unsafe-string:installed}
   "--ocaml-configure-option=DEFAULT_STRING=unsafe" {ocaml-option-default-unsafe-string:installed}
   "--ocaml-configure-option=--disable-flat-float-array" {ocaml-option-no-flat-float-array:installed}
   "--ocaml-configure-option=--enable-flambda" {ocaml-option-flambda:installed}
   "--ocaml-configure-option=--enable-frame-pointers" {ocaml-option-fp:installed}
   "--ocaml-configure-option=--enable-spacetime" {ocaml-option-spacetime:installed}
   "--ocaml-configure-option=--disable-naked-pointers" {ocaml-option-nnp:installed}
   "--ocaml-configure-option=--enable-naked-pointers-checker" {ocaml-option-nnpchecker:installed}
  ]
  [make "-j%{jobs}%"]
]
install: [make "install" ]
depends: [
  "ocamlfind" {build}
  "ocaml-src" {build}
  "ocaml" {>= "4.08.0" & < "4.14.0"}
  "solo5" {>= "0.7.0"}
]
pin-depends: [
  ["solo5.0.7.0" "git+https://github.com/TheLortex/solo5#77db27433ccd5b1ec13735e8ef1c92e141969a5c"]
]
conflicts: [
  "sexplib" {= "v0.9.0"}
  "solo5-kernel-ukvm"
  "solo5-kernel-virtio"
  "solo5-kernel-muen"
]
available: [
  ((os = "linux" & (arch = "x86_64" | arch = "arm64"))
  | (os = "freebsd" & arch = "x86_64")
  | (os = "openbsd" & arch = "x86_64"))
]
synopsis: "Freestanding OCaml compiler"
description:
  "This package provides a freestanding OCaml cross-compiler, suitable for linking with a unikernel base layer."
version: "0.7.0"
