opam-version: "2.0"
maintainer: "Martin Lucina <martin@lucina.net>"
authors: "Martin Lucina <martin@lucina.net>"
homepage: "https://github.com/mirage/ocaml-solo5"
bug-reports: "https://github.com/mirage/ocaml-solo5/issues/"
license: "MIT"
tags: "org:mirage"
dev-repo: "git+https://github.com/mirage/ocaml-solo5.git"
build: [
  ["./configure.sh"
   "--prefix=%{prefix}%"
   "--sysroot=%{_:lib}%"
   "--target=aarch64-solo5-none-static"
   "--ocaml-configure-option=--disable-flat-float-array" {ocaml-option-no-flat-float-array:installed}
   "--ocaml-configure-option=--enable-flambda" {ocaml-option-flambda:installed}
  ]
  [make "-j%{jobs}%"]
  [make "%{name}%.install"]
]
run-test: [
  [make "test"]
]
depends: [
  "conf-git" {build} # to patch the compiler sources
  "conf-pkg-config" {build} # to detect how to link with zstd
  "ocamlfind" {build} # needed by dune context (for tests)
  "ocaml-src" {build}
  "ocaml" {>= "5.0" & < "5.2"}
  "solo5" {>= "0.9.0"}
  "solo5-cross-aarch64" {>= "0.9.0" }
]
conflicts: [
  "ocaml-solo5"
  "sexplib" {= "v0.9.0"}
  "solo5-kernel-ukvm"
  "solo5-kernel-virtio"
  "solo5-kernel-muen"
]
available: [
  ((os = "linux" & (arch = "x86_64" | arch = "arm64"))
  | (os = "freebsd" & arch = "x86_64")
  | (os = "openbsd" & arch = "x86_64"))
]
synopsis: "OCaml cross-compiler to the freestanding 64-bit ARM Solo5 backend"
description:
  "This package provides a OCaml cross-compiler for ARM64, suitable for linking with a Solo5 unikernel."
