(executable
 (name main)
 (modules main)
 (link_flags :standard -linkall -cclib "-z solo5-abi=hvt")
 (enabled_if (= %{context_name} solo5))
 (foreign_stubs
   (language c)
   (names startup manifest))
 (libraries fmt))

(rule
 (targets manifest.c)
 (deps manifest.json)
 (action
  (run solo5-elftool gen-manifest manifest.json manifest.c)))
